--- a/about.html
+++ b/about.html
@@ -651,20 +651,27 @@
 
                                         <div class="project-module module text project-module-text align- js-project-module e2e-site-project-module-text">
                                             <div class="rich-text js-text-editable module-text">
-                                                <div style="text-align:left;"><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">服务项目</span></span><br><br>
-                                                    品牌宣传&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Logotype</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding Personnel | Commercial</span><br>
-                                                    <span
-                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding de Mariage | Évènement</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">产品介绍</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Magazine | Journal | Impression publicitaire</span><br>
-                                                        <span
-                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">- Annonce en ligne | Campagne de développement</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Design pour média sociaux</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">LOGO演绎</span><br>
-                                                            <span
-                                                                style="font-family:gmsj; font-style:normal; font-weight:300;">- Matériel marketing | Cartes d’affaires | Affiche | Brochure</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Menu | Vêtement | Autocollant | Infographique | Skateboard</span><br>
-                                                                <span
-                                                                    style="font-family:gmsj; font-style:normal; font-weight:300;">- Habillage de véhicule | Affichage | Lettrage</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">栏目片头</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Illustration vectoriel et à la main</span><br>
-                                                                    <span
-                                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Logo et typographie à la main</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">公益宣传</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Vous manquez de temps pour vous occuper</span><br>
-                                                                        <span
-                                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">de l’impression de vos nouveaux designs?</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Je peux le faire pour vous!</span><br></div>
+                                                <div style="text-align:left;">
+                                                  <p><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">关于动画项目的应用场景</span></span><br>
+                                                    <br>
+                                                    品牌宣传 | 用于讲述品牌故事&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><br>
+  <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 企 业 宣 传 | 公司招聘，团队简介</span>
+													  <br>
+<span style="font-family:gmsj; font-style:normal; font-weight:300;">- 产 品 介 绍 | 介绍产品功能</span><br>
+  <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 动态LOGO | 动态的品牌呈现，让你的品牌动起来</span>
+													  &nbsp;</p>
+                                                 <p>&nbsp; 
+                                                    <br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:600;">栏目频道 | 用于节目包装</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 网络节目 | 片头，片尾，标题，转场设计</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- IP动画 | 片头，片尾，转场设计</span><br>
+                                                    <br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:600;">演示动画 | 用于信息可视化展示 </span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">科普动画 | 旅游攻略，历史讲解，病毒视频</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">GIF动画 | 表情包,GIF创意动画&nbsp;</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">微课动画 | 教学内容可视化</span><br>
+                                                  </p>
+                                              </div>
                                             </div>
                                         </div>
 
