--- a/contact.html
+++ b/contact.html
@@ -658,57 +658,19 @@ padding-bottom: 0px;
   clear: both;
 ">
                                             <div class="rich-text js-text-editable module-text">
-                                                <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">关于橙子动漫<br><br></span></span>
+                                                <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">联系橙子动漫<br><br></span></span>
                                                     </span>专注于动态设计凝聚十年案例经验<br>
                                                     丰富多彩的美学和清晰故事的叙述<br>
                                                     通过动态设计将品牌故事带入生活<br><br>
                                                     无论是制作一条企业的MG动画宣传视频，<br>
                                                     还是在生活中练习创作，<br>我总是需要创造美好的东西<br>
                                                     这对你来说是个好消息。<br><br>
-                                                    写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br>微信：2546279355<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br>
+                                                    微信二维码:<img src="img/微信.jpg" width="512" height="512" alt=""/><br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
-
-
-
-
-
-
-
-
-
-
-
-                                        <div class="project-module module form project-module-form js-project-module-form js-js-project-module" data-id="m5ff623a67476e729aad311b4cb045f2f3cdab0f7add001bcb922a">
-                                            <form class="contact-form e2e-site-contact-form">
-
-                                                <div class="form-input">
-                                                    <label for="field1">名字 *</label>
-                                                    <input type="text" name="field1" data-validate="required,Generic" placeholder="" required />
-                                                </div>
-
-                                                <div class="form-input">
-                                                    <label for="email">电子邮件 *</label>
-                                                    <input type="text" name="email" data-validate="required,Email,required" placeholder="" required />
-                                                </div>
-
-                                                <div class="form-input">
-                                                    <label for="field2">留言*</label>
-                                                    <textarea name="field2" data-validate="required,Generic" placeholder="" required></textarea>
-                                                </div>
-                                                <div class="js-submit submit-button" data-id="m5ff623a67476e729aad311b4cb045f2f3cdab0f7add001bcb922a"><span class="js-submit-text submit-text preserve-whitespace">发送</span></div>
-                                            </form>
-                                            <div class="contact-form-sent">
-                                                谢谢!
-                                            </div>
-                                        </div>
-
-
-
-
-
-                                        <div class="project-module module image project-module-image js-js-project-module" style="padding-top: 66px;
+<div class="project-module module image project-module-image js-js-project-module" style="padding-top: 66px;
 padding-bottom: 0px;
   width: 100%;
   max-width: 100px;
@@ -719,7 +681,7 @@ padding-bottom: 0px;
 
 
 
-                                            <div class="js-lightbox" data-src=""> </div>
+                    <div class="js-lightbox" data-src=""> </div>
 
 
                                         </div>
