--- a/contact.html
+++ b/contact.html
@@ -666,7 +666,12 @@ padding-bottom: 0px;
                                                     还是在生活中练习创作，<br>我总是需要创造美好的东西<br>
                                                     这对你来说是个好消息。<br><br>
                                                     写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br>
-                                                    微信二维码:<img src="img/微信.jpg" width="512" height="512" alt=""/><br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    微信二维码:
+						                          <div class="project-module module image project-module-image js-js-project-module">
+                            <div class="js-lightbox" data-src="img/微信.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/微信.jpg" data-src="img/微信.jpg"
+   </div>
+                          </div>
+<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
