--- a/about.html
+++ b/about.html
@@ -667,9 +667,9 @@
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:300;">- IP动画 | 片头，片尾，转场设计</span><br>
                                                     <br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:600;">演示动画 | 用于信息可视化展示 </span><br>
-                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">科普动画 | 旅游攻略，历史讲解，病毒视频</span><br>
-                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">GIF动画 | 表情包,GIF创意动画&nbsp;</span><br>
-                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">微课动画 | 教学内容可视化</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 科普动画 | 病毒视频</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- GIF动画 | 表情包,GIF创意动画&nbsp;</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 微课动画 | 教学内容可视化</span><br>
                                                   </p>
                                               </div>
                                             </div>
