--- a/10.html
+++ b/10.html
@@ -648,8 +648,8 @@
                   <div class="page-container" data-context="page.page.container" data-hover-hint="pageContainer">
                     <section class="page standard-modules">
                       <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
-                        <h1 class="title preserve-whitespace e2e-site-logo-text">资格证书 | 成为在线英语老师</h1>
-                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;成为在线英语老师&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <h1 class="title preserve-whitespace e2e-site-logo-text">企业招聘 | 资格证书</h1>
+                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </p>
 					
 						</header>
