--- a/about.html
+++ b/about.html
@@ -655,7 +655,7 @@
                                                   <p><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">关于动画项目的应用场景</span></span><br>
                                                     <br>
                                                     品牌宣传 | 用于讲述品牌故事&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><br>
-  <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 企 业 宣 传 | 公司招聘，团队简介</span>
+  <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 企 业 宣 传 | 企业招聘，团队简介，角色故事，活动促销</span>
 													  <br>
 <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 产 品 介 绍 | 介绍产品功能</span><br>
   <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 动态LOGO | 动态的品牌呈现，让你的品牌动起来</span>
@@ -664,11 +664,11 @@
                                                     <br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:600;">栏目频道 | 用于节目包装</span><br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 网络节目 | 片头，片尾，标题，转场设计</span><br>
-                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- IP动画 | 片头，片尾，转场设计</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- IP&nbsp; &nbsp; 动画 | 片头，片尾，转场设计</span><br>
                                                     <br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:600;">演示动画 | 用于信息可视化展示 </span><br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 科普动画 | 病毒视频</span><br>
-                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- GIF动画 | 表情包,GIF创意动画&nbsp;</span><br>
+                                                    <span style="font-family:gmsj; font-style:normal; font-weight:300;">- GIF动画&nbsp; &nbsp;| 表情包,GIF创意动画&nbsp;</span><br>
                                                     <span style="font-family:gmsj; font-style:normal; font-weight:300;">- 微课动画 | 教学内容可视化</span><br>
                                                   </p>
                                               </div>
