--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">企业招聘 | 在家做ESL老师</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 在家做老师</div>
                                         </div>
                                     </div>
                                 </div>
@@ -750,7 +750,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">老师故事 | 我在公司的一天</div>
+                                            <div class="title preserve-whitespace">角色故事 | 在家办公的日常 </div>
                                         </div>
                                     </div>
                                 </div>
@@ -771,7 +771,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">入职培训 | 基本要求</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 基本要求</div>
                                         </div>
                                     </div>
                                 </div>
@@ -813,7 +813,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">企业部门 | 职责介绍</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 教师管理职责介绍</div>
                                         </div>
                                     </div>
                                 </div>
@@ -835,7 +835,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">资格证书 | 成为在线英语老师</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 资格证书</div>
                                         </div>
                                     </div>
                                 </div>
@@ -856,7 +856,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">工作介绍 | 老师入职培训</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 线上1对1老师职责介绍</div>
                                         </div>
                                     </div>
                                 </div>
@@ -874,7 +874,7 @@
 <div class="details-wrap">
               <div class="details">
                             <div class="details-inner">
-                              <div class="title preserve-whitespace">老师故事 | 单身母亲的爱</div>
+                              <div class="title preserve-whitespace">角色故事 | 母亲的爱</div>
                             </div>
                           </div>
                         </div>
