--- a/07.html
+++ b/07.html
@@ -648,8 +648,8 @@
                   <div class="page-container" data-context="page.page.container" data-hover-hint="pageContainer">
                     <section class="page standard-modules">
                       <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
-                        <h1 class="title preserve-whitespace e2e-site-logo-text">入职培训 | 基本要求</h1>
-                        <p class="description">基本要求
+                        <h1 class="title preserve-whitespace e2e-site-logo-text">企业招聘 | 基本要求</h1>
+                        <p class="description">&nbsp;
                         </p>
 					
 						</header>
