--- a/11.html
+++ b/11.html
@@ -672,22 +672,9 @@
                         <div id="project-canvas2" class="js-project-modules modules content">
                           <div id="project-modules2">
 							  
-                          <div class="project-module module image project-module-image js-js-project-module">
-                          	<div class="js-lightbox" data-src="img/11/1.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/11/1.jpg" data-src="img/11/1.jpg"
-   </div>
-                            </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/11/2.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/11/2.jpg" data-src="img/11/2.jpg"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/11/3.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/11/3.jpg" data-src="img/11/3.jpg"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/11/4.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/11/4.jpg" data-src="img/11/4.jpg"
-   </div>
-                          </div>
+                           <div class="project-module module image project-module-image js-js-project-module">
+                          	<div class="js-lightbox" data-src="img/11/1.png"> <img class="js-lazy e2e-site-project-module-image" src="img/11/1.png" data-src="img/11/1.png"
+  
 </div>
 </div>
                         </div>
