--- a/07.html
+++ b/07.html
@@ -673,19 +673,7 @@
                           <div id="project-modules2">
 							  
                           <div class="project-module module image project-module-image js-js-project-module">
-                          	<div class="js-lightbox" data-src="img/07/1.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/07/1.jpg" data-src="img/07/1.jpg"
-   </div>
-                            </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/07/2.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/07/2.jpg" data-src="img/07/2.jpg"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/07/3.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/07/3.jpg" data-src="img/07/3.jpg"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/07/4.jpg"> <img class="js-lazy e2e-site-project-module-image" src="img/07/4.jpg" data-src="img/07/4.jpg"
+                          	<div class="js-lightbox" data-src="img/07/1.png"> <img class="js-lazy e2e-site-project-module-image" src="img/08/1.png" data-src="img/07/1.png"
    </div>
                           </div>
                           
